--- a/src/popup.html
+++ b/src/popup.html
@@ -1,34 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Test Browser Extension</title>
-    <style>
-        main {
-            width: 250px;
-            display: flex;
-            align-content: center;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        .result-container {
-            margin-top: 1rem;
-        }
-    </style>
+  <meta charset='UTF-8'>
+  <meta name='viewport'
+        content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'>
+  <meta http-equiv='X-UA-Compatible' content='ie=edge'>
+  <title>Test Browser Extension</title>
 </head>
 <body>
 <main>
-    <button id="create_window">
-        Get your visitor id
-    </button>
-    <div class="result-container">
-        Your visitorId:
-        <span id="result"></span>
-    </div>
+
 </main>
 </body>
 </html>
