feat(website): Show current version

--- a/packages/website/public/index.html
+++ b/packages/website/public/index.html
@@ -137,10 +137,15 @@
               padding: 0.75em 1em;
           }
       }
+
+      .version {
+          padding: 0.5rem;
+          font-size: 0.8rem;
+      }
   </style>
 </head>
 <body>
-<div class='content'>
+<main class='content'>
 
   <div class='outputHolder'>
     <img class='logo' src="<%=require('./logo.png').default%>" alt='Logo'>
@@ -148,6 +153,10 @@
       <div class='heading'>Getting the visitor identifier...</div>
     </section>
   </div>
-</div>
+</main>
+<footer class='version'>
+
+</footer>
 </body>
+
 </html>
